--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -331,5 +331,6 @@
   "add_folder_lists_selection_empty": "No available KanLists. Create more to be able to add them to this folder.",
   "add_to_folder_from_list_title": "Add this list to any folder",
   "add_to_folder_from_list_error": "Something happened while adding the list to the folder. Try again later.",
-  "test_mode_folder": "Folder Test"
+  "test_mode_folder": "Folder Test",
+  "study_folder_bottom_sheet_title": "Make a test with the KanLists within the folders of your choice"
 }
