--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -242,8 +242,9 @@
   "dict_add_kanji_title": "Wort malen",
   "dict_model_not_loaded": "Modell konnte nicht geladen werden :(",
   "coach_tutorial_kanlists_1": "Hier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
-  "coach_tutorial_kanlists_2": "Dies sind die verschiedenen Aktionen, die Sie durchführen können (von links nach rechts):\n\n- Ihre Vokabellisten ansehen.\n\n- Eine neue Liste sowohl zum Markt als auch zu Ihren eigenen Listen hinzufügen UND einen Test machen. Sie können die Listen nach Lektionen eines Buches, Thema, Schwierigkeitsgrad usw. erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie sie gedrückt und ein Dialog erscheint, um diese Aktion durchzuführen.\n\n-Zugang zum Markt, wo Sie Vokabellisten herunterladen können, die von anderen Benutzern erstellt und hochgeladen wurden",
-  "coach_tutorial_kanlists_3": "Wenn du auf Wörter stößt, die du nicht kennst, kannst du sie im Wörterbuch nachschlagen und sie direkt zu deinen Listen hinzufügen",
+  "coach_tutorial_kanlists_2": "Sie können hier tippen, um alle Ihre Listen oder Ordner anzuzeigen. Vielleicht möchten Sie Ordner erstellen, um die Listen zu gruppieren, damit Sie sie weiter klassifizieren und ordnen können.\n\nZum Beispiel könnten Sie alle Ihre Listen aus den Mina No Nihongo oder Genki Lektionen in einem einzigen Ordner speichern.",
+  "coach_tutorial_kanlists_3": "Dies sind die verschiedenen Aktionen, die Sie durchführen können (von links nach rechts):\n\n- Ihre Vokabellisten ansehen.\n\n- Eine neue Liste sowohl zum Markt als auch zu Ihren eigenen Listen hinzufügen UND einen Test machen. Sie können die Listen nach Lektionen eines Buches, Thema, Schwierigkeitsgrad usw. erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie sie gedrückt und ein Dialog erscheint, um diese Aktion durchzuführen.\n\n-Zugang zum Markt, wo Sie Vokabellisten herunterladen können, die von anderen Benutzern erstellt und hochgeladen wurden",
+  "coach_tutorial_kanlists_4": "Wenn du auf Wörter stößt, die du nicht kennst, kannst du sie im Wörterbuch nachschlagen und sie direkt zu deinen Listen hinzufügen",
   "coach_tutorial_detail_1": "Hier werden alle Vokabeln aus der Liste angezeigt. Sie können im Laufe Ihres Studiums jederzeit mehr hinzufügen.\n\nJedes Mal, wenn Sie in einem Bereich (z. B. Schreiben) üben, wird das Vokabular aktualisiert und der Prozentsatz des Erfolgs in diesem Bereich angezeigt.",
   "coach_tutorial_detail_2": "Fügen Sie weitere Vokabeln hinzu, die Sie auf der Straße, beim Lernen, Lesen, in Videospielen oder Anime sehen, indem Sie hier klicken.\n\n Sie können Wörter erstellen, indem Sie ihre Aussprache und Bedeutung hinzufügen.",
   "coach_tutorial_detail_3": "Hier sind die zusätzlichen Aktionen. Sie können den Lernmodus ändern: zufällig oder räumlich (links) oder einen Blitztest nur dieser Vokabelliste machen (rechts).\n\nDer Lernmodus bestimmt die Reihenfolge des Lernens beim Üben einer Vokabelliste:\n\nWenn er zufällig ist, wird die Reihenfolge der Wörter beim Üben zufällig sein.\n\nWenn er räumlich ist, werden die Wörter, bei denen Sie in früheren Sitzungen am schlechtesten abgeschnitten haben, zuerst erscheinen, die letzten sind die, die Sie am besten kennen.",
@@ -309,5 +310,27 @@
   "bottom_actions_upload_list": "Eine neue Liste hochladen",
   "market_rating_not_found": "Die Liste, die Sie gerade bewertet haben, wurde nicht gefunden.",
   "add_to_market_list_name_label": "Listenname",
-  "add_to_market_list_name_hint": "Name"
+  "add_to_market_list_name_hint": "Name",
+  "folder_list_load_failed": "Das Abrufen von Ordnern ist fehlgeschlagen.",
+  "folder_list_empty": "Keine verfügbaren Ordner.\n\nErstellen Sie neue Ordner, um Ihre Listen zu ordnen, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
+  "kan_list_tile_createDialogForDeletingFolder_title": "Entfernen eines Ordners",
+  "kan_list_tile_createDialogForDeletingFolder_content": "Sind Sie sicher, dass Sie diesen Ordner entfernen wollen? KanListen werden durch diese Aktion nicht entfernt, aber sie werden nicht mehr angeordnet",
+  "kan_list_tile_createDialogForDeletingFolder_positive": "Entfernen",
+  "folder_searchBar_hint": "Nach Ordnername suchen",
+  "bottom_actions_create_folder": "Einen neuen Ordner erstellen",
+  "add_folder_title": "Ordner hinzufügen",
+  "add_folder_name_label": "Ordnername",
+  "add_folder_name_hint": "Manga-Verwandt",
+  "add_folder_lists_selection": "Wählen Sie aus, welche Listen Sie zu diesem Ordner hinzufügen möchten",
+  "add_folder_insertion_error": "Beim Erstellen des Ordners ist etwas passiert. Versuchen Sie es später noch einmal.",
+  "add_folder_name_error": "Der Ordnername darf nicht leer sein.",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_title": "Eine KanList aus diesem Ordner entfernen",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_content": "Sind Sie sicher, dass Sie diese Liste aus diesem Ordner entfernen wollen?",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_positive": "Entfernen",
+  "add_folder_update_title": "Listen zum Ordner hinzufügen",
+  "add_folder_lists_selection_empty": "Keine verfügbaren KanListen. Erstellen Sie weitere, um sie zu diesem Ordner hinzufügen zu können.",
+  "add_to_folder_from_list_title": "Diese Liste zu einem beliebigen Ordner hinzufügen",
+  "add_to_folder_from_list_error": "Beim Hinzufügen der Liste zum Ordner ist etwas passiert. Versuchen Sie es später noch einmal.",
+  "test_mode_folder": "Ordner test",
+  "study_folder_bottom_sheet_title": "Machen Sie einen Test mit den KanListen in den Ordnern Ihrer Wahl"
 }
