--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -242,8 +242,9 @@
   "dict_add_kanji_title": "Draw word",
   "dict_model_not_loaded": "Could not load model :(",
   "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
-  "coach_tutorial_kanlists_2": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
-  "coach_tutorial_kanlists_3": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
+  "coach_tutorial_kanlists_2": "You can tap here in order to view all your lists or folders. You can create folders to group lists for further classification and order in your study.\n\nFor example, you might want to store all your lists from the Mina No Nihongo or Genki lessons in one single folder.",
+  "coach_tutorial_kanlists_3": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
+  "coach_tutorial_kanlists_4": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
   "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
   "coach_tutorial_detail_3": "Here are the supplementary actions. You can change the learning mode: random or spatial (left) or do a Blitz test of this vocabulary list only (right).\n\nThe learning mode determines the order of study when practising a vocabulary list:\n\nIf it is random, the order of the words when practising will be random.\n\nIf it is spatial, the words that you have been worst at in previous sessions will appear first, the last ones being the ones you know best.",
@@ -309,5 +310,27 @@
   "bottom_actions_upload_list": "Upload a new list",
   "market_rating_not_found": "The list you just rated was not found.",
   "add_to_market_list_name_label": "List Name",
-  "add_to_market_list_name_hint": "Name"
+  "add_to_market_list_name_hint": "Name",
+  "folder_list_load_failed": "Failed to retrieve folders.",
+  "folder_list_empty": "No available folders.\n\nCreate new folders to arrange your lists by tapping on '+' or import them from your backup.",
+  "kan_list_tile_createDialogForDeletingFolder_title": "Remove a Folder",
+  "kan_list_tile_createDialogForDeletingFolder_content": "Are you sure you want to remove this folder? KanLists will not be removed by this action, although they will not be arranged anymore.",
+  "kan_list_tile_createDialogForDeletingFolder_positive": "Remove",
+  "folder_searchBar_hint": "Search by folder name",
+  "bottom_actions_create_folder": "Create a new folder",
+  "add_folder_title": "Add Folder",
+  "add_folder_name_label": "Folder Name",
+  "add_folder_name_hint": "Manga Related",
+  "add_folder_lists_selection": "Choose which lists you want to add to this folder",
+  "add_folder_insertion_error": "Something happened while creating the folder. Try again later.",
+  "add_folder_name_error": "The folder name must not be empty.",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_title": "Remove a KanList from this folder",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_content": "Are you sure you want to remove this list from this folder?",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_positive": "Remove",
+  "add_folder_update_title": "Add Lists to Folder",
+  "add_folder_lists_selection_empty": "No available KanLists. Create more to be able to add them to this folder.",
+  "add_to_folder_from_list_title": "Add this list to any folder",
+  "add_to_folder_from_list_error": "Something happened while adding the list to the folder. Try again later.",
+  "test_mode_folder": "Folder Test",
+  "study_folder_bottom_sheet_title": "Make a test with the KanLists within the folders of your choice"
 }
