--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -242,8 +242,9 @@
   "dict_add_kanji_title": "Dibujar palabra",
   "dict_model_not_loaded": "No se ha podido cargar el modelo :(",
   "coach_tutorial_kanlists_1": "Aquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
-  "coach_tutorial_kanlists_2": "Estas son las diferentes acciones que puedes realizar (de izquierda a derecha):\n\n- Visualizar tus listas de vocabulario.\n\n- Añadir una nueva lista tanto al mercado como a tus propias listas Y realizar un test. Puedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.\n\n-Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
-  "coach_tutorial_kanlists_3": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
+  "coach_tutorial_kanlists_2": "Puedes tocar aquí para ver todas tus listas o carpetas. Puedes crear carpetas para agrupar las listas con el fin de clasificarlas y ordenarlas en tu estudio.\n\nPor ejemplo, es posible que quieras almacenar todas tus listas de las lecciones de Mina No Nihongo o Genki en una sola carpeta",
+  "coach_tutorial_kanlists_3": "Estas son las diferentes acciones que puedes realizar (de izquierda a derecha):\n\n- Visualizar tus listas de vocabulario.\n\n- Añadir una nueva lista tanto al mercado como a tus propias listas Y realizar un test. Puedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.\n\n-Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
+  "coach_tutorial_kanlists_4": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
   "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
   "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás cambiar de modo de aprendizaje: aleatorio o espacial (izquierda) o realizar un test Blitz solamente de esta lista de vocabulario (derecha).\n\nEl modo de aprendizaje determina el orden de estudio al practicar una lista de vocabulario:\n\nSi es aleatorio, el orden de las palabras al practicar será aleatorio.\n\nSi es espacial, las palabras que peor se te han dado en anteriores sesiones aparecerán las primeras, siendo las últimas las que mejor te sabes.",
@@ -309,5 +310,27 @@
   "bottom_actions_upload_list": "Subir una nueva lista",
   "market_rating_not_found": "La lista que has calificado no se ha podido encontrar.",
   "add_to_market_list_name_label": "Nombre de la Lista",
-  "add_to_market_list_name_hint": "Nombre"
+  "add_to_market_list_name_hint": "Nombre",
+  "folder_list_load_failed": "Fallo en la recuperación de carpetas",
+  "folder_list_empty": "No hay carpetas disponibles.\n\nCrea nuevas carpetas para organizar las listas tocando en '+' o importalas desde su copia de seguridad.",
+  "kan_list_tile_createDialogForDeletingFolder_title": "Eliminar una carpeta",
+  "kan_list_tile_createDialogForDeletingFolder_content": "¿Estás seguro de que quieres eliminar esta carpeta? Las listas no se eliminarán con esta acción, aunque ya no estarán ordenadas",
+  "kan_list_tile_createDialogForDeletingFolder_positive": "Eliminar",
+  "folder_searchBar_hint": "Buscar por nombre de carpeta",
+  "bottom_actions_create_folder": "Crear una nueva carpeta",
+  "add_folder_title": "Añadir carpeta",
+  "add_folder_name_label": "Nombre de la carpeta",
+  "add_folder_name_hint": "Manga",
+  "add_folder_lists_selection": "Elige qué listas quieres añadir a esta carpeta",
+  "add_folder_insertion_error": "Ha ocurrido algo al crear la carpeta. Inténtalo de nuevo más tarde",
+  "add_folder_name_error": "El nombre de la carpeta no debe estar vacío",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_title": "Eliminar esta lista de esta carpeta",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_content": "¿Está seguro de que quieres eliminar esta lista de esta carpeta?",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_positive": "Eliminar",
+  "add_folder_update_title": "Añadir lista a carpeta",
+  "add_folder_lists_selection_empty": "No hay listas disponibles. Crea más para poder añadirlas a esta carpeta",
+  "add_to_folder_from_list_title": "Añadir esta lista a cualquier carpeta",
+  "add_to_folder_from_list_error": "Ha ocurrido algo al añadir la lista a la carpeta. Inténtalo de nuevo más tarde.",
+  "test_mode_folder": "Test de Carpeta",
+  "study_folder_bottom_sheet_title": "Haz un test con las KanLists dentro de las carpetas de tu elección"
 }
