--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -332,5 +332,12 @@
   "add_to_folder_from_list_title": "Add this list to any folder",
   "add_to_folder_from_list_error": "Something happened while adding the list to the folder. Try again later.",
   "test_mode_folder": "Folder Test",
-  "study_folder_bottom_sheet_title": "Make a test with the KanLists within the folders of your choice"
+  "study_folder_bottom_sheet_title": "Make a test with the KanLists within the folders of your choice",
+  "abbr_test_mode_selection": "Selection",
+  "abbr_test_mode_blitz": "Blitz",
+  "abbr_test_mode_remembrance": "Remembrance",
+  "abbr_test_mode_number": "Numbers",
+  "abbr_test_mode_less": "Less %",
+  "abbr_test_mode_categories": "Categories",
+  "abbr_test_mode_folder": "Folders"
 }
