--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -341,5 +341,11 @@
   "abbr_test_mode_categories": "Kategories",
   "abbr_test_mode_folder": "Ordner",
   "market_list_to_upload": "Liste",
-  "market_folder_to_upload": "Ordner"
+  "market_folder_to_upload": "Ordner",
+  "word_history_title": "Geschichte",
+  "word_history_load_failed": "Beim Laden der Historie ist ein Fehler aufgetreten. Versuchen Sie es später noch einmal.",
+  "word_history_empty": "Es wurden keine Wörter in der Historie gefunden",
+  "word_history_showRemoveHistorysDialog_title": "Alle gesuchten Wörter löschen",
+  "word_history_showRemoveHistorysDialog_content": "Alle bis jetzt gesuchten Wörter werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden. Möchten Sie fortfahren?",
+  "word_history_showRemoveHistorysDialog_positive": "Löschen"
 }
