--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -341,5 +341,11 @@
   "abbr_test_mode_categories": "Categories",
   "abbr_test_mode_folder": "Folders",
   "market_list_to_upload": "List",
-  "market_folder_to_upload": "Folder"
+  "market_folder_to_upload": "Folder",
+  "word_history_title": "History",
+  "word_history_load_failed": "Something wrong happened during loading the history. Try again later.",
+  "word_history_empty": "No words have been found in the history",
+  "word_history_showRemoveHistorysDialog_title": "Delete all searched words",
+  "word_history_showRemoveHistorysDialog_content": "All searched words until now will be removed. This action cannot be undone. Do you want to proceed?",
+  "word_history_showRemoveHistorysDialog_positive": "Delete"
 }
