--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -347,5 +347,6 @@
   "word_history_empty": "No se ha encontrado ninguna palabra en el historial",
   "word_history_showRemoveHistorysDialog_title": "Eliminar todas las palabras buscadas",
   "word_history_showRemoveHistorysDialog_content": "Se eliminarán todas las palabras buscadas hasta el momento. Esta acción no se puede deshacer. ¿Quieres continuar?",
-  "word_history_showRemoveHistorysDialog_positive": "Eliminar"
+  "word_history_showRemoveHistorysDialog_positive": "Eliminar",
+  "searched_label": "Buscado"
 }
