--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -349,6 +349,7 @@
   "word_history_showRemoveHistorysDialog_content": "Alle bis jetzt gesuchten Wörter werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden. Möchten Sie fortfahren?",
   "word_history_showRemoveHistorysDialog_positive": "Löschen",
   "searched_label": "Durchsucht",
-  "remembrance_bottom_sheet_on_label": "Gedächtnis an",
-  "less_pct_bottom_sheet_on_label": "Weniger % an"
+  "blitz_bottom_sheet_on_folder_label": "Blitz auf Ordner",
+  "erinnerung_unten_blatt_auf_ordner_label": "Gedächtnis auf Ordner",
+  "less_pct_bottom_sheet_on_folder_label": "Weniger % auf Ordner"
 }
