--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -230,7 +230,7 @@
   "number_bottom_sheet_begin": "Empezar",
   "image_not_loaded": "No se ha podido cargar la imagen :(",
   "dict_title": "Diccionario",
-  "dict_search_bar_hint": "Dibuja un kanji y busca su significado",
+  "dict_search_bar_hint": "Dibuja o escribe una palabra",
   "dict_search_empty": "Dibuja un kanji primero",
   "dict_search_button_title": "Buscar",
   "dict_predictions_most_likely": "Más probable",
