--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -351,5 +351,8 @@
   "searched_label": "Searched",
   "blitz_bottom_sheet_on_folder_label": "Blitz on folder",
   "remembrance_bottom_sheet_on_folder_label": "Remembrance on folder",
-  "less_pct_bottom_sheet_on_folder_label": "Less % on folder"
+  "less_pct_bottom_sheet_on_folder_label": "Less % on folder",
+  "test_mode_daily": "Daily Test",
+  "abbr_test_mode_daily": "Daily",
+  "daily_test_description": "Perform a daily test on a random mode (writing, reading, listening or recognition) with an ordered combination of words to strengthen your study.\n\nYou can repeat this test whenever you want but you cannot exit from it, you have to finish it!"
 }
