--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -11,10 +11,12 @@
   "study_modes_reading": "Lesen",
   "study_modes_recognition": "Erkennen",
   "study_modes_listening": "Anhören",
+  "study_modes_speaking": "Sprechen",
   "study_modes_writing_ext": "書く",
   "study_modes_reading_ext": "読む",
   "study_modes_recognition_ext": "認識",
   "study_modes_listening_ext": "聴聞",
+  "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "Das Testergebnis ist ungültig und es wird kein Ergebnis ausgegeben.",
   "study_mode_update_handler_finishedTest_content": "Tippen Sie auf „Fertig stellen“, um die Ergebnisse anzuzeigen.",
   "study_mode_update_handler_poppedPractice_content": "Punkte bis zu diesem Wort werden gespeichert. Punkte für das aktuelle Wort werden halbiert. ",
