--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -11,10 +11,12 @@
   "study_modes_reading": "Lectura",
   "study_modes_recognition": "Reconocimiento",
   "study_modes_listening": "Escucha",
+  "study_modes_speaking": "Habla",
   "study_modes_writing_ext": "書く",
   "study_modes_reading_ext": "読む",
   "study_modes_recognition_ext": "認識",
   "study_modes_listening_ext": "聴聞",
+  "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "La prueba será inválida y no se proporcionará ningún resultado",
   "study_mode_update_handler_finishedTest_content": "Pulsa en 'Finalizar' para ver los resultados",
   "study_mode_update_handler_poppedPractice_content": "Se guardará la puntuación hasta esta palabra. La palabra actual contará con el 50% de acierto",
