Updated docs and localization

--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -191,10 +191,10 @@
   "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.",
   "tutorial_dictionary": "En el Diccionario, haciendo uso de algoritmos de Inteligencia Artificial, podrás dibujar kanji que desconozcas y formar palabras con ellos para buscarlos en Jisho.org.",
   "tutorial_market": "Este es el mercado, donde podrás descargar listas de otros usuarios y subir tus listas para que otros se las descarguen. Para esto debes estar registrado en KanPractice.",
-  "tutorial_lists": "Esta es la vista detalle de una lista. Aquí verás todas las palabras incluidas en la lista con colores, denotando su nota individual. Podrás practicar o hacer tests de escritura, lectura, reconocimiento o escucha.",
+  "tutorial_lists": "Esta es la vista detalle de una lista. Aquí verás todas las palabras incluidas en la lista con colores, denotando su nota individual. Podrás practicar o hacer tests de escritura, lectura, reconocimiento, escucha o habla.",
   "tutorial_details": "Al pulsar en una palabra se podrá ver la propia palabra con todos sus datos: lectura (con opción a escucharla con TTS), opción para ver datos extra de la palabra con Jisho.org, significado, estadísticas en referencia a los tipos de aprendizaje y fecha de creación.",
   "tutorial_jisho": "Junto con Jisho.org, se extraen distintos datos del kanji o palabra para facilitar el aprendizaje del mismo con ejemplos en frases, on'yomi, kun'yomi y vídeo del trazado.\n\nDesde el Diccionario, al buscar palabras nuevas, se mostrará esta página y podrás añadir la palabra a tus listas de estudio directamente.",
-  "tutorial_practicing": "Al practicar o hacer tests, tendrás que validar cada palabra o caracter para denotar la nota de la propia palabra. El conjunto de estas notas es la que determina la nota total de tus listas. El método de validación varía entre modos de apredizaje: escritura, lectura, reconocimiento o escucha.",
+  "tutorial_practicing": "Al practicar o hacer tests, tendrás que validar cada palabra o caracter para denotar la nota de la propia palabra. El conjunto de estas notas es la que determina la nota total de tus listas. El método de validación varía entre modos de apredizaje: escritura, lectura, reconocimiento, escucha o habla.",
   "tutorial_options": "Hay más opciones en los Ajustes, ¡asegúrate de probarlas!\n\n¡Empecemos!",
   "jisho_no_match": "No se ha podido encontrar ninguna coincidencia en jisho.org",
   "jisho_resultData_jlpt": "JLPT",
@@ -358,7 +358,7 @@
   "abbr_test_mode_daily": "Diario",
   "daily_test_bottom_sheet_title": "Hacer un test diario",
   "daily_test_bottom_sheet_load_failed": "No se ha podido hacer ninguna lista. Prueba de nuevo más tarde.",
-  "daily_test_description": "Realiza un test diario en una modalidad aleatoria (escritura, lectura, escucha o reconocimiento) con una combinación ordenada de palabras para reforzar tu estudio.\n\nPuedes repetir este test cuando quieras pero no puedes salir de él, ¡tienes que terminarlo!",
+  "daily_test_description": "Realiza un test diario en una modalidad aleatoria (escritura, lectura, escucha, reconocimiento o habla) con una combinación ordenada de palabras para reforzar tu estudio.\n\nPuedes repetir este test cuando quieras pero no puedes salir de él, ¡tienes que terminarlo!",
   "daily_test_start_button": "Empezar",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
