--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -191,10 +191,10 @@
   "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.",
   "tutorial_dictionary": "Im Wörterbuch können Sie mithilfe von Algorithmen der künstlichen Intelligenz Kanji zeichnen, die Sie nicht kennen, und mit ihnen Wörter bilden, um sie in Jisho.org nachzuschlagen.",
   "tutorial_market": "Dies ist der Markt, auf dem Sie Listen von anderen Nutzern herunterladen und Ihre eigenen Listen hochladen können, damit andere sie herunterladen können. Dazu müssen Sie bei KanPractice registriert sein.",
-  "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Man kann üben oder Schreib-, Lese-, Merk- oder Hörtests machen.",
+  "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Sie können Schreib-, Lese-, Erkennungs-, Hör- und Sprachtests durchführen oder ablegen.",
   "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit Text to Speech anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
   "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Stroke Video zu erleichtern.\n\nWenn Sie im Wörterbuch nach neuen Wörtern suchen, wird diese Seite angezeigt und Sie können das gesuchte Wort direkt zu Ihren Lernlisten hinzufügen.",
-  "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen, Erkennen oder Anhören",
+  "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen, Erkennen, Hören oder Sprechen",
   "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!",
   "jisho_no_match": "Konnte keine Übereinstimmung in jisho.org finden",
   "jisho_resultData_jlpt": "JLPT",
@@ -358,7 +358,7 @@
   "abbr_test_mode_daily": "Täglich",
   "daily_test_bottom_sheet_title": "Einen täglichen Test durchführen",
   "daily_test_bottom_sheet_load_failed": "Es konnte keine Liste erfasst werden. Versuchen Sie es später erneut.",
-  "daily_test_description": "Führen Sie einen täglichen Test in einem zufälligen Modus (Schreiben, Lesen, Hören oder Erkennen) mit einer geordneten Kombination von Wörtern durch, um Ihr Lernen zu stärken.\n\nSie können diesen Test jederzeit wiederholen, aber Sie können ihn nicht beenden, sondern müssen ihn zu Ende bringen!",
+  "daily_test_description": "Führen Sie einen täglichen Test in einem zufälligen Modus (Schreiben, Lesen, Hören, Erkennen oder Sprechen) mit einer geordneten Kombination von Wörtern durch, um Ihr Lernen zu stärken.\n\nSie können diesen Test jederzeit wiederholen, aber Sie können ihn nicht beenden, sondern müssen ihn zu Ende bringen!",
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
