--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -11,10 +11,12 @@
   "study_modes_reading": "Reading",
   "study_modes_recognition": "Recognition",
   "study_modes_listening": "Listening",
+  "study_modes_speaking": "Speaking",
   "study_modes_writing_ext": "書く",
   "study_modes_reading_ext": "読む",
   "study_modes_recognition_ext": "認識",
   "study_modes_listening_ext": "聴聞",
+  "study_modes_speaking_ext": "発声",
   "study_mode_update_handler_poppedTest_content": "The test will result invalid and no result will be provided.",
   "study_mode_update_handler_finishedTest_content": "Tap on 'Finish' to see the results.",
   "study_mode_update_handler_poppedPractice_content": "Score up to this word will be saved. Current word will be count as 50%.",
@@ -189,10 +191,10 @@
   "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests.",
   "tutorial_dictionary": "In the Dictionary, using Artificial Intelligence algorithms, you will be able to draw kanji you don't know and form words with them to look them up in Jisho.org.",
   "tutorial_market": "This is the market, where you can download lists from other users and upload your lists for others to download. For this you must be registered in KanPractice.",
-  "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading, recognition or listening tests.",
+  "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading, recognition, listening or speaking tests.",
   "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it with TTS), option to see extra data of the word with Jisho.org, meaning, statistics in reference to learning types and creation date.",
   "tutorial_jisho": "Together with Jisho.org, different data of the kanji or word is extracted to facilitate the learning of the word with examples in sentences, on'yomi, kun'yomi and stroke video.\n\nFrom the Dictionary, when searching for new words, this page will show up and you will be able to add the searched word to your study lists directly",
-  "tutorial_practicing": "When practicing or doing tests, you will have to validate each word or character to denote the note of the word itself. It is the aggregate of these scores that determines the total score of your lists. The method of validation varies between learning modes: writing, reading, recognition or listening.",
+  "tutorial_practicing": "When practicing or doing tests, you will have to validate each word or character to denote the note of the word itself. It is the aggregate of these scores that determines the total score of your lists. The method of validation varies between learning modes: writing, reading, recognition, listening or speaking.",
   "tutorial_options": "There are more options in the Settings, be sure to try them out!\n\nLet's begin!",
   "jisho_no_match": "Could not find any match in jisho.org",
   "jisho_resultData_jlpt": "JLPT",
@@ -230,7 +232,7 @@
   "number_bottom_sheet_begin": "Begin",
   "image_not_loaded": "Could not load image :(",
   "dict_title": "Dictionary",
-  "dict_search_bar_hint": "Draw a kanji and search its meaning",
+  "dict_search_bar_hint": "Draw or type a word",
   "dict_search_empty": "Draw a kanji first",
   "dict_search_button_title": "Search",
   "dict_predictions_most_likely": "Most likely",
@@ -348,5 +350,18 @@
   "word_history_showRemoveHistorysDialog_title": "Delete all searched words",
   "word_history_showRemoveHistorysDialog_content": "All searched words until now will be removed. This action cannot be undone. Do you want to proceed?",
   "word_history_showRemoveHistorysDialog_positive": "Delete",
-  "searched_label": "Searched"
+  "searched_label": "Searched",
+  "blitz_bottom_sheet_on_folder_label": "Blitz on folder",
+  "remembrance_bottom_sheet_on_folder_label": "Remembrance on folder",
+  "less_pct_bottom_sheet_on_folder_label": "Less % on folder",
+  "test_mode_daily": "Daily Test",
+  "abbr_test_mode_daily": "Daily",
+  "daily_test_bottom_sheet_title": "Perform a daily test",
+  "daily_test_bottom_sheet_load_failed": "No list could be gathered. Try again later.",
+  "daily_test_description": "Perform a daily test on a random mode (writing, reading, listening, recognition or speaking) with an ordered combination of words to strengthen your study.\n\nYou can repeat this test whenever you want but you cannot exit from it, you have to finish it!",
+  "daily_test_start_button": "Start",
+  "daily_test_start_button_tr": "始める",
+  "daily_test_cannot_go_back": "You are performing a daily test. Finish the test, you can do it!",
+  "settings_notifications_label": "Enable/Disable Notifications"
+
 }
