--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -362,5 +362,7 @@
   "daily_test_start_button": "Start",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
-  "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen"
+  "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
+  "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
+  "stats_tests_total_acc": "Gesamt-Genauigkeit nach Studienmodus"
 }
