--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -362,5 +362,7 @@
   "daily_test_start_button": "Empezar",
   "daily_test_start_button_tr": "始める",
   "daily_test_cannot_go_back": "Estás haciendo un test diario. Termina el test, ¡tú puedes!",
-  "settings_notifications_label": "Activar/Desactivar Notificaciones"
+  "settings_notifications_label": "Activar/Desactivar Notificaciones",
+  "stats_tests_by_type": "Número Total de Tests por Tipo",
+  "stats_tests_total_acc": "Acierto Total por Modo de Estudio"
 }
